--- a/vignettes/awesome_table_in_pdf.Rmd
+++ b/vignettes/awesome_table_in_pdf.Rmd
@@ -24,6 +24,8 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+\clearpage
+
 > Please see the package [documentation site](http://haozhu233.github.io/kableExtra) for how to use this package in HTML and more.  
 
 # Overview
@@ -85,7 +87,9 @@ header-includes:
 ## Plain LaTeX
 Plain LaTeX table looks relatively ugly in 2017.
 ```{r}
-kable(dt)
+# As I said, you don't need format = "latex" if you have defined 
+# knitr.table.format in options.
+kable(dt, format = "latex")
 ```
 
 ## LaTeX table with booktabs
@@ -258,8 +262,8 @@ An aliased function `text_spec` is also provided for a more literal writing expe
 ```{r}
 sometext <- strsplit(paste0(
   "You can even try to make some crazy things like this paragraph. ", 
-  "It seems to be a useless feature at this moment but it's so cool ",
-  "that nobody can resist. ;)"
+  "It may seem like a useless feature right now but it's so cool ",
+  "and nobody can resist. ;)"
 ), " ")[[1]]
 text_formatted <- paste(
   text_spec(sometext, "latex", color = spec_color(1:length(sometext), end = 0.9),
