--- a/tests/visual_tests/footnote_html.Rmd
+++ b/tests/visual_tests/footnote_html.Rmd
@@ -10,7 +10,7 @@ library(knitr)
 library(kableExtra)
 
 mtcars[1:5, 1:5] %>%
-  kable("html") %>%
+  kable("html", caption = paste0("test", footnote_marker_symbol(1))) %>%
   kable_styling() %>%
   footnote("ccc", c("number 1; ", "number 2. "), c("a 1; ", "a 2."), c("s 1; ", "s 2."),
                    number_title = "special: ", alphabet_title = "abc: ", 
